menu page add not responsive

--- a/style.css
+++ b/style.css
@@ -333,3 +333,12 @@ ul {
     font-size: xx-large;
     color: #ff0000;
 }
+
+.menu-bg{
+    background-color: #eaeaea;
+ }
+ .creason__info {
+     border: 2px solid #4d4d4d98;
+ 
+ }
+ 
