--- a/style.css
+++ b/style.css
@@ -694,3 +694,14 @@ ul {
     }
 
 }
+
+.small-cart-value {
+    position: absolute;
+    bottom: 40px; /* Adjust vertical position */
+    right: -5px; /* Adjust horizontal position */
+    background-color: rgb(210, 3, 3); 
+    color: white;
+    padding: 5px 10px; 
+    border-radius: 50%; 
+    font-size: 12px; 
+}
