--- a/style.css
+++ b/style.css
@@ -694,3 +694,13 @@ ul {
     }
 
 }
+
+.checkoutButton{
+    border-radius: 50px;
+    background: #ff0000;
+    color: white;
+}
+.checkoutButton:focus{
+    outline: 0;
+    box-shadow: none;
+}
